--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       expand-separator
       icon="article"
       label="Конструктор документов"
+      :default-opened=false
     >
       <offers :selectedprofile='selectedprofile'></offers>
       <q-scroll-area style="height: 50em">
