--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       expand-separator
       icon="article"
       label="Конструктор документов"
-      :default-opened=false
+      :default-opened=true
     >
       <offers :selectedprofile='selectedprofile'></offers>
       <q-scroll-area style="height: 50em">
@@ -56,6 +56,7 @@
     function openUrl(url){
       window.open(url)
     }
+
   </script>
 
   <!-- Import Vue -->
