--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       :default-opened=true
     >
       <offers :selectedprofile='selectedprofile'></offers>
-      <q-scroll-area style="height: 50em">
+      <!-- <q-scroll-area style="height: 50em"> -->
         <square :square='square' :options='filterSquare'></square>
         <categories :filter='categories'></categories>
         <services :selected='selected' :columns='columns' :rows='rows' :filter='categories.val' :square='square' :selectedprofile='selectedprofile'></services>
         <payments :selected='selectedpayment' :columns='columnspayment' :rows='rowspayment' :filter='payments'></payments>
         <additional :selected='selectedadditional' :columns='columnsadditional' :rows='rowsadditional'></additional>
         <documents :columns='columnsdocuments' :rows='rowsdocuments' :selected='selecteddocuments' :filter='payments'></documents>
-      </q-scroll-area>
+      <!-- </q-scroll-area> -->
     </q-expansion-item>
   </div>
   
