--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <selectedrows></selectedrows>
     <fields></fields>
 
-    <q-expansion-item expand-separator icon="article" label="Конструктор документов" :default-opened=true>
+    <q-expansion-item expand-separator icon="article" label="Конструктор документов" :default-opened=false>
       <offers :selectedprofile='selectedprofile'></offers>
       <!-- <q-scroll-area style="height: 50em"> -->
       <square :square='square' :options='filterSquare'></square>
