--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <div id="q-app">
     <selectedrows></selectedrows>
     <fields></fields>
-
-    <q-expansion-item expand-separator icon="article" label="Конструктор документов" :default-opened=false>
+    <q-expansion-item expand-separator icon="article" label="Конструктор документов" :default-opened=true>
       <offers :selectedprofile='selectedprofile'></offers>
       <!-- <q-scroll-area style="height: 50em"> -->
       <square :square='square' :options='filterSquare'></square>
@@ -24,8 +23,7 @@
       <services :selected='selected' :columns='columns' :rows='rows' :filter='categories.val' :square='square':selectedprofile='selectedprofile'></services>
       <payments :selected='selectedpayment' :columns='columnspayment' :rows='rowspayment' :filter='payments'></payments>
       <additional :selected='selectedadditional' :columns='columnsadditional' :rows='rowsadditional'></additional>
-      <documents :columns='columnsdocuments' :rows='rowsdocuments' :selected='selecteddocuments' :filter='payments'>
-      </documents>
+      <documents :columns='columnsdocuments' :rows='rowsdocuments' :selected='selecteddocuments' :filter='payments'></documents>
       <!-- </q-scroll-area> -->
     </q-expansion-item>
   </div>
