--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet"
-    type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons" rel="stylesheet" type="text/css">
   <link href="https://cdn.jsdelivr.net/npm/quasar@2.0.0-beta.9/dist/quasar.prod.css" rel="stylesheet" type="text/css">
   <title>КП</title>
 </head>
@@ -29,7 +28,6 @@
   </div>
 
   <script>
-    // var idc = <?= id ?>;
     // var view = JSON.parse(<?= getView() ?>);
     // var model = JSON.parse(<?= getModel(id) ?>);
 
@@ -71,19 +69,15 @@
         // ).then(resp =>
         // console.log(resp.json())
       );
-      console.log(await response.json());
     }
 
     function openUrl(url) {
       window.open(url)
     }
-
   </script>
 
   <!-- Import Vue -->
   <script src="https://unpkg.com/vue@next"></script>
-  <!-- <script src="https://unpkg.com/vue@3.0.0-beta.12/dist/vue.global.js"></script> -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.prod.js"></script> -->
 
   <!-- Import Quasar -->
   <script src="https://cdn.jsdelivr.net/npm/quasar@2.0.0-beta.9/dist/quasar.umd.prod.js"></script>
@@ -105,7 +99,9 @@
   <script src="./components/datepicker.js"></script>
 
   <!-- Mount app -->
-  <script>const vm = app.mount('#q-app')</script>
+  <script>
+    const vm = app.mount('#q-app')
+  </script>
 
 </body>
 
