--- a/index.html
+++ b/index.html
@@ -69,23 +69,34 @@
           :square="square"
           :selectedprofile="selectedprofile"
         ></services>
+
         <payments
           :selected="selectedpayment"
           :columns="columnspayment"
           :rows="rowspayment"
           :filter="payments"
         ></payments>
+
+        <dops
+          :selected="selecteddops"
+          :columns="columnsdops"
+          :rows="rowsdops"
+          :filter="dops"
+        ></dops>
+
         <additional
           :selected="selectedadditional"
           :columns="columnsadditional"
           :rows="rowsadditional"
         ></additional>
+
         <documents
           :columns="columnsdocuments"
           :rows="rowsdocuments"
           :selected="selecteddocuments"
           :filter="payments"
         ></documents>
+
         <!-- </q-scroll-area> -->
       </q-expansion-item>
     </div>
@@ -163,8 +174,9 @@
     <script src="./components/categories.js"></script>
     <script src="./components/services.js"></script>
     <script src="./components/payments.js"></script>
-    <!-- <script src="./components/additional.js"></script> -->
-    <!-- <script src="./components/documents.js"></script> -->
+    <script src="./components/dops.js"></script>
+    <script src="./components/additional.js"></script>
+    <script src="./components/documents.js"></script>
     <script src="./components/datepicker.js"></script>
 
     <!-- Mount app -->
